[gd_scene load_steps=46 format=3 uid="uid://dj3pm2hn41ggl"]

[ext_resource type="Script" path="res://PLAYER/player.gd" id="1_4ne4w"]
[ext_resource type="Texture2D" uid="uid://fnmsd8v72w3f" path="res://Medieval King Pack 2/Sprites/Idle.png" id="1_dxbpi"]
[ext_resource type="Texture2D" uid="uid://b38p5ufcpqmwy" path="res://Medieval King Pack 2/Sprites/Fall.png" id="2_4clc1"]
[ext_resource type="Texture2D" uid="uid://dhd3slnlyx7bi" path="res://Medieval King Pack 2/Sprites/Attack1.png" id="2_fi4xr"]
[ext_resource type="Texture2D" uid="uid://dceda60algf8l" path="res://Medieval King Pack 2/Sprites/Attack2.png" id="3_xroih"]
[ext_resource type="Texture2D" uid="uid://bq8ych8soqrdd" path="res://Medieval King Pack 2/Sprites/Attack3.png" id="4_2txlb"]
[ext_resource type="Texture2D" uid="uid://76fafe7xj1mp" path="res://Medieval King Pack 2/Sprites/Jump.png" id="4_8mv1m"]
[ext_resource type="Texture2D" uid="uid://cy3d76px45owd" path="res://Medieval King Pack 2/Sprites/Run.png" id="5_3sxh6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8hsat"]
atlas = ExtResource("2_fi4xr")
region = Rect2(0, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgq4q"]
atlas = ExtResource("2_fi4xr")
region = Rect2(160, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxhin"]
atlas = ExtResource("2_fi4xr")
region = Rect2(320, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxs0"]
atlas = ExtResource("2_fi4xr")
region = Rect2(480, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_qomc4"]
atlas = ExtResource("3_xroih")
region = Rect2(0, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyu3e"]
atlas = ExtResource("3_xroih")
region = Rect2(160, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_iblro"]
atlas = ExtResource("3_xroih")
region = Rect2(320, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0n20"]
atlas = ExtResource("3_xroih")
region = Rect2(480, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6b8g"]
atlas = ExtResource("4_2txlb")
region = Rect2(0, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu4tw"]
atlas = ExtResource("4_2txlb")
region = Rect2(160, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxu2c"]
atlas = ExtResource("4_2txlb")
region = Rect2(320, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_br5bq"]
atlas = ExtResource("4_2txlb")
region = Rect2(480, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_fytb8"]
atlas = ExtResource("2_4clc1")
region = Rect2(0, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfd6l"]
atlas = ExtResource("2_4clc1")
region = Rect2(160, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptios"]
atlas = ExtResource("1_dxbpi")
region = Rect2(0, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdddu"]
atlas = ExtResource("1_dxbpi")
region = Rect2(160, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgb4y"]
atlas = ExtResource("1_dxbpi")
region = Rect2(320, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_u61tb"]
atlas = ExtResource("1_dxbpi")
region = Rect2(480, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d0ov"]
atlas = ExtResource("1_dxbpi")
region = Rect2(640, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj14v"]
atlas = ExtResource("1_dxbpi")
region = Rect2(800, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_op4xp"]
atlas = ExtResource("1_dxbpi")
region = Rect2(960, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa4fi"]
atlas = ExtResource("1_dxbpi")
region = Rect2(1120, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_m18md"]
atlas = ExtResource("4_8mv1m")
region = Rect2(0, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs83i"]
atlas = ExtResource("4_8mv1m")
region = Rect2(160, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsux0"]
atlas = ExtResource("5_3sxh6")
region = Rect2(0, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy3oa"]
atlas = ExtResource("5_3sxh6")
region = Rect2(160, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek3vy"]
atlas = ExtResource("5_3sxh6")
region = Rect2(320, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_16hoh"]
atlas = ExtResource("5_3sxh6")
region = Rect2(480, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_78vyw"]
atlas = ExtResource("5_3sxh6")
region = Rect2(640, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6xko"]
atlas = ExtResource("5_3sxh6")
region = Rect2(800, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lcvf"]
atlas = ExtResource("5_3sxh6")
region = Rect2(960, 0, 160, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_i53lh"]
atlas = ExtResource("5_3sxh6")
region = Rect2(1120, 0, 160, 111)

[sub_resource type="SpriteFrames" id="SpriteFrames_i4fg1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hsat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgq4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxhin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxs0")
}],
"loop": false,
"name": &"attack1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qomc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyu3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iblro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0n20")
}],
"loop": false,
"name": &"attack2",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6b8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu4tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxu2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br5bq")
}],
"loop": false,
"name": &"attack3",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fytb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfd6l")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptios")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdddu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgb4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u61tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d0ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj14v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op4xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa4fi")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m18md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs83i")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsux0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy3oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek3vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16hoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78vyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6xko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lcvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i53lh")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7te57"]
radius = 11.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjd8n"]
size = Vector2(41, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w025"]
size = Vector2(129, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6xywj"]
size = Vector2(58, 90)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4ne4w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -17)
scale = Vector2(0.813626, 0.813626)
sprite_frames = SubResource("SpriteFrames_i4fg1")
animation = &"attack3"
autoplay = "idle"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7te57")

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="Attack1Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack1Area"]
position = Vector2(36.5, 2)
shape = SubResource("RectangleShape2D_mjd8n")
disabled = true

[node name="Attack2Area" type="Area2D" parent="."]
position = Vector2(0, -17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack2Area"]
position = Vector2(5, 15.5)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_0w025")
disabled = true

[node name="Attack3Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack3Area"]
position = Vector2(31, -21)
shape = SubResource("RectangleShape2D_6xywj")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="Attack1Area" to="." method="_on_attack_1_area_body_entered"]
[connection signal="body_entered" from="Attack2Area" to="." method="_on_attack_2_area_body_entered"]
[connection signal="body_entered" from="Attack3Area" to="." method="_on_attack_3_area_body_entered"]
